Copy to Clipboard - Added default values to twig file, added schema and validation, updated docs demo

--- a/apps/pattern-lab/src/_patterns/02-components/copy-to-clipboard/00-copy-to-clipboard-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/copy-to-clipboard/00-copy-to-clipboard-docs.twig
@@ -1,9 +1,7 @@
 {% set schema = get_data('@bolt-components-copy-to-clipboard/copy-to-clipboard.schema.yml') %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-copy-to-clipboard/copy-to-clipboard.twig" with {
-  text: "Copy Link",
-  copiedText: "Copied!",
-  url: "http://google.com"
+  url: "http://bolt-design-system.com"
 } only %}
 {% endverbatim %}
 {% endset %}
