Tooltip - Added transform key to button trigger

--- a/apps/pattern-lab/src/_patterns/02-components/tooltip/10--tooltip-button.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/tooltip/10--tooltip-button.twig
@@ -3,6 +3,7 @@
   trigger: {
     type: "button",
     text: "Trigger #1",
+    transform: "uppercase",
     icon: {
       name: "info-open",
       size: "medium"
