Revert "headline schema improvements (#523)"
This reverts commit bc4d5131105a174a99f151048f92a1a16d193790.

--- a/apps/pattern-lab/src/_patterns/02-components/sticky/00-sticky-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/sticky/00-sticky-docs.twig
@@ -16,11 +16,11 @@
   readmeFile: '@bolt-components-sticky/README.md',
   links: [
     {
-      url: link['components-sticky-simple-example'],
+      url: link['sticky-simple-example'],
       text: 'Sticky Simple Example'
     },
     {
-      url: link['components-sticky-with-content-example'],
+      url: link['sticky-with-content-example'],
       text: 'Sticky w/ Content Example'
     }
   ]
