--- a/packages/components/bolt-headline/src/_typography.twig
+++ b/packages/components/bolt-headline/src/_typography.twig
@@ -1,19 +1,30 @@
-{% set schema = bolt.data.components['@bolt-components-headline'].schema %}
+{% set tags = "any" %} {# Allowed Tags #}
+{% set weights = ["bold", "regular", "semibold"] %} {# Allowed Font-weights #}
+{% set styles = ["italic", "normal"] %} {# Allowed Font-styles #}
+{% set types = ["headline", "subheadline", "eyebrow", "text"] %} {# Pre-defined types #}
+{% set transformProps = ["none", "uppercase", "lowercase", "capitalize"] %} {# Pre-defined text transform options #}
+{% set sizes = [
+  "xsmall",
+  "small",
+  "medium",
+  "large",
+  "xlarge",
+  "xxlarge",
+  "xxxlarge"
+] %}
 
-{% set tags = schema.properties.tag.enum|remove_null %}
-{% set weights = schema.properties.weight.enum|remove_null %}
-{% set styles = schema.properties.style.enum|remove_null %}
-{% set tranformProps = schema.properties.transform.enum|remove_null %}
-{% set sizes = schema.properties.size.enum|remove_null %}
-{% set alignments = schema.properties.align.enum|remove_null %}
+{% set alignments = [
+  "left",
+  "center",
+  "right"
+] %}
 
-{% set _defaultTag = schema.properties.tag.default %}
-{% set _defaultWeight = schema.properties.weight.default %}
-{% set _defaultStyle = schema.properties.style.default %}
+{% set _defaultTag = "p" %}
+{% set _defaultWeight = "regular" %}
+{% set _defaultStyle = "normal" %}
 {% set _defaultType = "text" %}
-{% set _defaultSize = schema.properties.size.default %}
-{% set _defaultAlignment = schema.properties.align.default %}
-{% set _defaultTransform = schema.properties.transform.default %}
+{% set _defaultSize = "medium" %}
+{% set _defaultAlignment = "" %}
 
 
 {% if tags != "any" %}
@@ -25,7 +36,7 @@
 {% set style = style | default(_defaultStyle) %}
 {% set type = type in types ? type : _defaultType %}
 {% set size = size | default(_defaultSize) %}
-{% set transform = transform | default(_defaultTransform) %}
+{% set transform = transform | default("") %}
 {% set align = align in alignments ? align : _defaultAlignment %}
 
 {% set prefix = "c-bolt-" %}
@@ -76,5 +87,17 @@
 </{{ tag }}>
 
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-headline/headline.schema.yml', _self) }}
+  {# disabling schema validation for now as it has too many errors now #}
+  {#{{ validate_data_schema('@bolt-components-headline/headline.schema.yml', _self) }}#}
 {% endif %}
+
+{# set iconpos = iconpos | default("right") #}
+
+{# <bolt-headline
+    size="{{ size }}"
+    weight="{{ weight }}"
+    style="{{ style }}"
+    type="{{ type }}"
+    level="{{ level }}"
+    bolt-component
+  > </bolt-headline> #}
