--- a/apps/pattern-lab/src/_patterns/02-components/headline/15-headline-align-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/headline/15-headline-align-variations.twig
@@ -1,6 +1,6 @@
 {% set schema = bolt.data.components['@bolt-components-headline'].schema %}
 
-{% for align in schema.properties.align.enum|remove_null %}
+{% for align in schema.properties.align.enum %}
   <p>Align: {{ alignmentName }}</p>
   {% include "@bolt-components-headline/headline.twig" with {
     text: "This is an example of align " ~ align,
