--- a/packages/components/bolt-tooltip/src/tooltip.scss
+++ b/packages/components/bolt-tooltip/src/tooltip.scss
@@ -329,6 +329,7 @@ $bolt-tooltip-transition: $bolt-transition;
   display: block;
 
   button {
+    font-weight: 900;
     overflow: hidden;
 
     &:focus {
