--- a/apps/pattern-lab/src/_patterns/02-components/share/05-share.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/share/05-share.twig
@@ -1,3 +1,4 @@
+<div style="text-align: center; padding: 6rem 0;">
 {% include '@bolt-components-share/share.twig' with {
   sources: ['facebook','twitter','linkedin'],
   email: true,
@@ -5,3 +6,4 @@
   visibility: 'visible',
   inline: false
 } only %}
+</div>
