styles: positioning bolt video

--- a/apps/pattern-lab/src/_patterns/04-pages/80-pega-world/pega-world.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/80-pega-world/pega-world.twig
@@ -241,20 +241,21 @@
       {% cell "u-bolt-width-1/1 u-bolt-width-9/12@small" %}
         <figure class="c-pw-stat-slideshow">
           <div class="c-pw-stat-slideshow-media">
-            {# <div>
-              <bolt-ratio  class="o-bolt-ratio" aspect-ratio-height="9" aspect-ratio-width="16" style="--aspect-ratio-height: 9; --aspect-ratio-width: 16;">
+            <div class="c-pw-stat-slideshow-media__embed">
+              <bolt-ratio  class="o-bolt-ratio">
                 <bolt-video
-                data-setup="{&quot;techOrder&quot;: [&quot;Html5&quot;]}"
-                video-id="5609376179001"
-                player-id="r1CAdLzTW"
-                account-id="1900410236"
-                show-meta
-                show-meta-title></bolt-video>
+                  data-setup="{&quot;techOrder&quot;: [&quot;Html5&quot;]}"
+                  video-id="5609376179001"
+                  player-id="r1CAdLzTW"
+                  account-id="1900410236"
+                  show-meta
+                  show-meta-title>
+                </bolt-video>
               </bolt-ratio>
-            </div> #}
+            </div>
 
-            <video id="video" poster="http://sandbox.thewikies.com/vfe-generator/images/big-buck-bunny_poster.jpg" src="http://media.w3.org/2010/05/bunny/trailer.ogv" preload loop>
-            </video>
+            {# <video class="c-pw-stat-slideshow-media__video" poster="http://sandbox.thewikies.com/vfe-generator/images/big-buck-bunny_poster.jpg" src="http://media.w3.org/2010/05/bunny/trailer.ogv" preload loop>
+            </video> #}
           </div>
           <figcaption class="c-pw-stat-slideshow-content">
             <div class="c-pw-stat-slideshow-content__scroll">
