--- a/apps/pattern-lab/src/_patterns/04-pages/80-pega-world/pega-world.scss
+++ b/apps/pattern-lab/src/_patterns/04-pages/80-pega-world/pega-world.scss
@@ -290,20 +290,46 @@ $bolt-pw-stat-slideshow-shadow-color: bolt-color(indigo, xdark);
     padding-bottom: 0;
     border-width: 2rem 2rem 2rem 0;
     border-radius: 0 50% 50% 0;
-
-    > * {
-      padding-top: calc(#{bolt-v-spacing(large)} + 1rem);
-      padding-bottom: calc(#{bolt-v-spacing(large)} + 1rem);
-    }
   }
+}
+
+.c-pw-stat-slideshow-media__video {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: auto;
+  height: 100%;
+  transform: translateX(-50%);
+
+  @include respond-to(medium) {
+    padding-top: calc(#{bolt-v-spacing(large)} + 1rem);
+    padding-bottom: calc(#{bolt-v-spacing(large)} + 1rem);
+  }
+}
+
+.c-pw-stat-slideshow-media__embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 
   > * {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: auto;
-    height: 100%;
-    transform: translateX(-50%);
+    position: absolute !important;
+    top: 50% !important;
+    left: 50% !important;
+    transform: translate(-50%, -50%) !important;
+  }
+
+  @include respond-to(medium) {
+    position: static;
+    padding-top: calc(#{bolt-v-spacing(large)} + 1rem);
+    padding-bottom: calc(#{bolt-v-spacing(large)} + 1rem);
+
+    > * {
+      width: 333% !important;
+      height: 100% !important;
+    }
   }
 }
 
