chore: updating video id

--- a/apps/pattern-lab/src/_patterns/04-pages/80-pega-world/pega-world.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/80-pega-world/pega-world.twig
@@ -245,9 +245,11 @@
               <bolt-ratio  class="o-bolt-ratio">
                 <bolt-video
                   data-setup="{&quot;techOrder&quot;: [&quot;Html5&quot;]}"
-                  video-id="5609376179001"
+                  video-id="5750064959001"
                   player-id="r1CAdLzTW"
                   account-id="1900410236"
+                  loop="true"
+                  autoplay="true"
                   show-meta
                   show-meta-title>
                 </bolt-video>
