Block List - attribute structural adjustment for plain text items

--- a/apps/pattern-lab/src/_patterns/02-components/block-list/00-block-list-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/block-list/00-block-list-docs.twig
@@ -26,9 +26,7 @@
         position: "before"
       }
     }),
-    {
-      "text": "Simple text example"
-    }
+    "Simple text example"
   ]
 } %}
 {% endverbatim %}
