--- a/apps/pattern-lab/src/_patterns/02-components/block-list/05-block-list.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/block-list/05-block-list.twig
@@ -24,8 +24,6 @@
         position: "before"
       }
     }),
-    {
-      "text": "Simple text example"
-    }
+    "Simple text example"
   ]
 } %}
