--- a/apps/pattern-lab/src/_patterns/02-components/block-list/10-block-list-theme-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/block-list/10-block-list-theme-variation.twig
@@ -30,9 +30,7 @@
               position: "before"
             }
           }),
-          {
-            "text": "Simple text example"
-          }
+          "Simple text example"
         ]
       } %}
     {% endblock %}
