Block List - convert to web component and pass items through props

--- a/packages/components/bolt-block-list/src/block-list.scss
+++ b/packages/components/bolt-block-list/src/block-list.scss
@@ -2,7 +2,8 @@
    Block List
 \* ------------------------------------ */
 
-@import '@bolt/core';
+//@import '@bolt/core';
+@import "@bolt/components-headline/src/all-headlines.scss"; // Pulls in '@bolt/core' with headlines
 
 // Register Custom Block Element
 @include bolt-register-element('bolt-block-list', 'block');
