--- a/packages/components/bolt-block-list/src/block-list.twig
+++ b/packages/components/bolt-block-list/src/block-list.twig
@@ -1,27 +1,4 @@
-{% set prefix = "c-bolt-" %}
-
-{% set attributes = create_attribute(attributes|default({})) %}
-
-{% set componentName = "block-list" %}
-{% set baseClass = prefix ~ componentName %}
-
-{% set classes = [
-  baseClass
-] %}
-
-<bolt-{{ componentName }} bolt-component>
-  <ul {{ attributes.addClass(classes) }}>
-    {% for listItem in contentItems %}
-      <li class="{{ "#{baseClass}__item" }}">
-        {% if listItem.text %}
-          {{ listItem.text }}
-        {% else %}
-          {{ listItem }}
-        {% endif %}
-      </li>
-    {% endfor %}
-  </ul>
-</bolt-{{ componentName }}>
+<bolt-block-list items='{{ contentItems|join(',') }}' bolt-component />
 
 {% if enable_json_schema_validation %}
   {{ validate_data_schema('@bolt-components-block-list/block-list.schema.yml', _self) }}
